// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionBank editor Node builds the expected component 1`] = `
<div
  className="obojobo-draft--chunks--question-bank editor-bank"
  dummy="dummyData"
>
  <button
    className="delete"
    onClick={[Function]}
  >
    X
  </button>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center buffer"
  >
    <button
      onClick={[Function]}
    >
      Add Question
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center buffer"
  >
    <button
      onClick={[Function]}
    >
      Add Question Bank
    </button>
  </div>
</div>
`;

exports[`QuestionBank editor Node builds the expected component 2`] = `
<div
  className="qb-settings"
  dummy="dummyData"
>
  <div />
</div>
`;

exports[`QuestionBank editor Node component adds question 1`] = `"<div class=\\"obojobo-draft--chunks--question-bank editor-bank\\"><button class=\\"delete\\">X</button><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question Bank</button></div></div>"`;

exports[`QuestionBank editor Node component adds question bank 1`] = `"<div class=\\"obojobo-draft--chunks--question-bank editor-bank\\"><button class=\\"delete\\">X</button><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question Bank</button></div></div>"`;

exports[`QuestionBank editor Node component deletes self 1`] = `"<div class=\\"obojobo-draft--chunks--question-bank editor-bank\\"><button class=\\"delete\\">X</button><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question</button></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center buffer\\"><button>Add Question Bank</button></div></div>"`;

exports[`QuestionBank editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "choose": Infinity,
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "nodes": Array [
        Object {
          "type": "mockNode",
        },
        Object {
          "type": "mockNode",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.QuestionBank.Settings",
    },
    Object {
      "data": Object {
        "content": Object {
          "choose": 1,
        },
      },
      "key": "mockKey",
      "nodes": Array [
        Object {
          "nodes": Array [
            Object {
              "type": "mockNode",
            },
            Object {
              "type": "mockNode",
            },
          ],
          "object": "block",
          "type": "ObojoboDraft.Chunks.QuestionBank.Settings",
        },
        undefined,
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`QuestionBank editor plugins.renderNode renders a question bank when passed 1`] = `
<Node
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.QuestionBank",
    }
  }
/>
`;

exports[`QuestionBank editor plugins.renderNode renders settings when passed 1`] = `
<Settings
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.QuestionBank.Settings",
    }
  }
/>
`;

exports[`QuestionBank editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "content": Object {},
      "id": "mockKey",
      "type": "ObojoboDraft.Chunks.QuestionBank",
    },
    undefined,
  ],
  "content": Object {
    "choose": "mockText",
    "select": false,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
